# sample_it

./: .gitignore  Cargo.toml  README.md  database.db
src/: database.rs  lib.rs  main.rs  solver.rs
src/database/: functions.rs  mod.rs  model.rs
src/server/: .mod.rs.un~  mod.rs  responders.rs  routes.rs
webapp/: package-lock.json  package.json
webapp/db/: db.json
webapp/src/: App.vue  main.js  style.css
webapp/src/components/: AddOrEdit.vue  AppElement.vue  HeaderComponent.vue  ListElements.vue  MainHeader.vue  ShowLabel.vue  TitleComponent.vue
webapp/src/router/: index.js
webapp/src/services/: api.js
webapp/src/store/: index.js
webapp/src/views/: AddItemView.vue  AllCollectionsView.vue  CollectionView.vue  CreateCollectionView.vue  EditCollectionView.vue  GenerateSampleView.vue  HomeView.vue  ItemView.vue
webapp_tailwind/: index.html  package-lock.json  package.json
webapp_tailwind/db/: db.json
webapp_tailwind/src/: App.vue  main.js  style.css
webapp_tailwind/src/components/: HeaderComponent.vue  TitleComponent.vue
webapp_tailwind/src/router/: index.js
webapp_tailwind/src/views/: AddItemView.vue  AllCollectionsView.vue  BackupAddItemView.vue  CollectionView.vue  CreateCollectionView.vue  EditCollectionView.vue  GenerateSampleView.vue  HomeView.vue
